# YAAF

./: .gitmodules  CHANGELOG  CMakeLists.txt  Changelog.txt  LICENSE.yaaf  README.md
cmake/: YAAF_Config.cmake
include/: YAAF.h  YAAF_Setup.h
libyaaf/: CMakeLists.txt
libyaaf/cmake/: YAAF_Config.cmake
libyaaf/include/: YAAF.h  YAAF_Setup.h
libyaaf/src/: YAAF_Archive.c  YAAF_Archive.h  YAAF_Compression.c  YAAF_Compression.h  YAAF_Compression_lz4.c  YAAF_Compression_lz4.h  YAAF_File.c  YAAF_File.h  YAAF_Hash.c  YAAF_Hash.h  YAAF_HashMap.c  YAAF_HashMap.h  YAAF_Hash_xxhash.c  YAAF_Hash_xxhash.h  YAAF_Internal.c  YAAF_Internal.h  YAAF_MemFile.c  YAAF_MemFile.h  YAAF_TLS.c  YAAF_TLS.h
src/: YAAF_Archive.c  YAAF_Archive.h  YAAF_Compression.c  YAAF_Compression.h  YAAF_Compression_lz4.c  YAAF_File.c  YAAF_File.h  YAAF_Hash_xxhash.h  YAAF_Internal.c  YAAF_Internal.h  YAAF_LZ4.c  YAAF_LZ4.h  YAAF_MemFile.c  YAAF_test.c
test/: CMakeLists.txt  YAAF_TestCompression.c  YAAF_TestHashMap.c
tools/yaafcl/: CMakeLists.txt  YAAFCL.c  YAAFCL.h  YAAFCL_DirUtils.c  YAAFCL_DirUtils.h  YAAFCL_Job.c  YAAFCL_Job.h  YAAFCL_StrUtil.c  YAAFCL_StrUtil.h
yaafcl/: CMakeLists.txt  YAAFCL.c  YAAFCL.h  YAAFCL_DirUtils.c  YAAFCL_Job.c  YAAFCL_StrUtil.h
