################################################################################
# YAAF - Test programs
################################################################################

add_executable(YAAF_TestCompression YAAF_TestCompression.c)
target_link_libraries(YAAF_TestCompression ${YAAF_LIBRARIES})
